# python-template-project

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-Make  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
python_template_project/: __init__.py  demo.py
tests/: test_python_template_project.py
