[tool.poetry]
name = "python-template-project"
version = "0.1.0"
description = ""
authors = ["Audun Nes <REDACTED>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
types-requests = "^0.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^24.3"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"
bandit = "^1.7.0"
isort = "^5.8.0"
mypy = "^0.902"
pylint = "^2.8.3"
flynt = "^0.76"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.format]
max-line-length=88
